fixes for wrapping

--- a/src/webparts/QnA/components/QnAForm/QnAForm.module.scss
+++ b/src/webparts/QnA/components/QnAForm/QnAForm.module.scss
@@ -18,10 +18,10 @@
  }
 
 
- .rt-td {
-  white-space: normal !important;
-  overflow-wrap: break-word !important;
-}
+//  .rt-td {
+//   white-space: normal !important;
+//   overflow-wrap: break-word !important;
+// }
   .questionInput{
     word-wrap: break-word;
     overflow-wrap: break-word;
